<?xml version="1.0"?>
<package format="3">
  <name>mono_depth</name>
  <version>0.1.0</version>
  <description>Monocular depth estimation</description>
  <maintainer email="rohankhaire.work@gmail.com">Rohan Khaire</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
